add header and part of the first section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Responsive Layout</title>
 </head>
-<body>
-    
+<body class="debug">
+    <header>
+
+    </header>
+    <main>
+
+        <!-- Demo Section -->
+        <section>
+            <div class="container flex">
+                <div class="col-12 col-md-8">Ciao</div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
