fixed first section responsive

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
 
         <!-- Demo Section -->
         <section>
-            <div class="container flex">
-                <div class="col-12 col-md-8">Ciao</div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
+            <div class="container">
+                <div class="row flex-md">
+                    <div class="card col-md-8"></div>
+                    <div class="card col-md-4-up"></div>
+                </div>
+                <div class="row flex-md">
+                    <div class="card col-md-4"></div>
+                    <div class="card col-md-4"></div>
+                    <div class="card col-md-4"></div>
+                </div>
             </div>
         </section>
     </main>
