--- a/index.html
+++ b/index.html
@@ -17,19 +17,64 @@
 
         <!-- Demo Section -->
         <section>
-            <div class="container">
-                <div class="row flex-md">
-                    <div class="card col-md-8"></div>
-                    <div class="card col-md-4-up"></div>
-                </div>
-                <div class="row flex-md">
-                    <div class="card col-md-4"></div>
-                    <div class="card col-md-4"></div>
-                    <div class="card col-md-4"></div>
-                </div>
+            <div class="container row-md">
+                <div class="col-12 col-md-8">Demo</div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
+                <div class="col-12 col-md-4"></div>
             </div>
         </section>
+
+        <!-- Planning Section -->
+        <section>
+            <div class="container row-lg">
+                <div class="col-12 col-lg-6">Planning</div>
+                <div class="col-12 col-lg-6"></div>
+            </div>
+        </section>
+
+        <!-- Partner Section -->
+        <section>
+            <div class="container">
+                <div class="col-12">Partner</div>
+                <div class="col-12"></div>
+                <div class="col-12"></div>
+                <div class="col-12"></div>
+            </div>
+        </section>
+
+        <!-- Benefits Section -->
+        <section>
+            <div class="container row-md">
+                <div class="col-12 col-md-6 col-lg-4">Benefits</div>
+                <div class="col-12 col-md-6 col-lg-4"></div>
+                <div class="col-12 col-md-6 col-lg-4"></div>
+                <div class="col-12 col-md-6 col-lg-4"></div>
+                <div class="col-12 col-md-6 col-lg-4"></div>
+                <div class="col-12 col-md-6 col-lg-4"></div>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section>
+            <div class="container row-md">
+                <div class="col-12 col-md-6">About</div>
+                <div class="col-12 col-md-6"></div>
+            </div>
+        </section>
+
+        <!-- Free Section -->
+        <section>
+            <div class="container">
+                <div class="col-12">Free</div>
+            </div>
+        </section>
+
     </main>
-    <footer></footer>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
