--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/95701d90ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Responsive Layout</title>
 </head>
 <body class="debug">
     <header>
-
+        <div class="container display-header">
+            <a href="#"><img src="./assets/img/logo.png" alt="logo"></a>
+            <a href="#"><i class="fa-sharp fa-solid fa-bars"></i></a>
+            <div class="menu-desktop">
+                <a href="#">Planning</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Features</a>
+                <a href="#">About Us</a>
+                <a href="#" class="btn-header">Get Started</a>
+            </div>
+        </div>
     </header>
     <main>
 
         <!-- Demo Section -->
         <section>
-            <div class="container row-md">
+            <div class="container flex row-md">
                 <div class="col-12 col-md-8">Demo</div>
                 <div class="col-12 col-md-4"></div>
                 <div class="col-12 col-md-4"></div>
@@ -28,7 +39,7 @@
 
         <!-- Planning Section -->
         <section>
-            <div class="container row-lg">
+            <div class="container flex row-lg">
                 <div class="col-12 col-lg-6">Planning</div>
                 <div class="col-12 col-lg-6"></div>
             </div>
@@ -36,7 +47,7 @@
 
         <!-- Partner Section -->
         <section>
-            <div class="container">
+            <div class="container flex">
                 <div class="col-12">Partner</div>
                 <div class="col-12"></div>
                 <div class="col-12"></div>
@@ -46,7 +57,7 @@
 
         <!-- Benefits Section -->
         <section>
-            <div class="container row-md">
+            <div class="container flex row-md">
                 <div class="col-12 col-md-6 col-lg-4">Benefits</div>
                 <div class="col-12 col-md-6 col-lg-4"></div>
                 <div class="col-12 col-md-6 col-lg-4"></div>
@@ -58,7 +69,7 @@
 
         <!-- About Section -->
         <section>
-            <div class="container row-md">
+            <div class="container flex row-md">
                 <div class="col-12 col-md-6">About</div>
                 <div class="col-12 col-md-6"></div>
             </div>
@@ -66,7 +77,7 @@
 
         <!-- Free Section -->
         <section>
-            <div class="container">
+            <div class="container flex">
                 <div class="col-12">Free</div>
             </div>
         </section>
