demo section responsive

--- a/index.html
+++ b/index.html
@@ -24,16 +24,40 @@
             </div>
         </div>
     </header>
+
     <main>
 
         <!-- Demo Section -->
         <section>
             <div class="container flex row-md">
-                <div class="col-12 col-md-8">Demo</div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
-                <div class="col-12 col-md-4"></div>
+                <div class="col-12 demo col-md-8 flex-lg">
+                    <div>
+                        <h4>Get a demo application</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam illo ullam sunt deserunt. Ullam ipsam possimus praesentium doloremque.</p>
+                        <a href="#" class="btn-demo"><i class="fa-brands fa-apple"></i> App Store</a>
+                    </div>
+                    <img src="./assets/img/phone.png" alt="#">
+                </div>
+                <div class="col-12 demo col-md-4">
+                    <div class="demo-icon"><i class="fa-solid fa-file-code"></i></div>
+                    <h4>Clean Code</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                </div>
+                <div class="col-12 demo col-md-4">
+                    <div class="demo-icon"><i class="fa-solid fa-compass-drafting"></i></div>
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                </div>
+                <div class="col-12 demo col-md-4">
+                    <div class="demo-icon"><i class="fa-solid fa-laptop-code"></i></div>
+                    <h4>Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                </div>
+                <div class="col-12 demo col-md-4">
+                    <div class="demo-icon"><i class="fa-solid fa-bullhorn"></i></div>
+                    <h4>Branding</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                </div>
             </div>
         </section>
 
