planning section responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95701d90ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Responsive Layout</title>
@@ -62,10 +62,19 @@
         </section>
 
         <!-- Planning Section -->
-        <section>
+        <section class="planning">
             <div class="container flex row-lg">
-                <div class="col-12 col-lg-6">Planning</div>
-                <div class="col-12 col-lg-6"></div>
+                <div class="col-12 col-lg-6">
+                    <img src="./assets/img/planning1.png" alt="planning">
+                    <h3>Strategic Planning</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis laborum assumenda nemo quaerat consequatur alias, placeat at corrupti voluptates soluta explicabo tempore sint voluptatibus amet! Nulla repellat sit ipsam.</p>
+                </div>
+                <div class="col-12 planning-center col-lg-6">
+                    <img src="./assets/img/planning2.png" alt="planning">
+                    <h4>App Development</h4>
+                    <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                    <a href="#" class="plan-arrow"><i class="fa-solid fa-arrow-down-long"></i></a>
+                </div>
             </div>
         </section>
 
