--- a/index.html
+++ b/index.html
@@ -28,53 +28,73 @@
     <main>
 
         <!-- Demo Section -->
-        <section>
-            <div class="container flex row-md">
-                <div class="col-12 demo col-md-8 flex-lg">
-                    <div>
-                        <h4>Get a demo application</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam illo ullam sunt deserunt. Ullam ipsam possimus praesentium doloremque.</p>
-                        <a href="#" class="btn-demo"><i class="fa-brands fa-apple"></i> App Store</a>
+        <section class="demo">
+            <div class="container">
+                <div class="row row-md">
+                    <div class="col-12 col-md-8 flex-lg">
+                        <div class="card card-h100">
+                            <div>
+                                <h4>Get a demo application</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam illo ullam sunt deserunt. Ullam ipsam possimus praesentium doloremque.</p>
+                                <a href="#" class="btn-demo"><i class="fa-brands fa-apple"></i> App Store</a>
+                            </div>
+                            <img src="./assets/img/phone.png" alt="#">
+                        </div>                       
                     </div>
-                    <img src="./assets/img/phone.png" alt="#">
-                </div>
-                <div class="col-12 demo col-md-4">
-                    <div class="demo-icon"><i class="fa-solid fa-file-code"></i></div>
-                    <h4>Clean Code</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
-                </div>
-                <div class="col-12 demo col-md-4">
-                    <div class="demo-icon"><i class="fa-solid fa-compass-drafting"></i></div>
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
-                </div>
-                <div class="col-12 demo col-md-4">
-                    <div class="demo-icon"><i class="fa-solid fa-laptop-code"></i></div>
-                    <h4>Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
-                </div>
-                <div class="col-12 demo col-md-4">
-                    <div class="demo-icon"><i class="fa-solid fa-bullhorn"></i></div>
-                    <h4>Branding</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                    <div class="col-12 col-md-4">
+                        <div class="card card-h100">
+                            <div class="demo-icon"><i class="fa-solid fa-file-code"></i></div>
+                            <h4>Clean Code</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card">
+                            <div class="demo-icon"><i class="fa-solid fa-compass-drafting"></i></div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                        </div>    
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card">
+                            <div class="demo-icon"><i class="fa-solid fa-laptop-code"></i></div>
+                            <h4>Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card">
+                            <div class="demo-icon"><i class="fa-solid fa-bullhorn"></i></div>
+                            <h4>Branding</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi dicta similique ratione tempora repellendus ea quasi, aliquid nemo?</p>
+                        </div>                        
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Planning Section -->
         <section class="planning">
-            <div class="container flex row-lg">
-                <div class="col-12 col-lg-6">
-                    <img src="./assets/img/planning1.png" alt="planning">
-                    <h3>Strategic Planning</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis laborum assumenda nemo quaerat consequatur alias, placeat at corrupti voluptates soluta explicabo tempore sint voluptatibus amet! Nulla repellat sit ipsam.</p>
+            <div class="container">
+                <div class="row row-lg">
+                    <div class="col-12 col-lg-6">
+                        <div class="planning-card">
+                            <img src="./assets/img/planning1.png" alt="planning">
+                            <h3>Strategic Planning</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis laborum assumenda nemo quaerat consequatur alias, placeat at corrupti voluptates soluta explicabo tempore sint voluptatibus amet! Nulla repellat sit ipsam.</p>
+                        </div>                        
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="planning-card">
+                            <img src="./assets/img/planning2.png" alt="planning">
+                            <h4>App Development</h4>
+                            <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                            <a href="#" class="plan-arrow"><i class="fa-solid fa-arrow-down-long"></i></a>
+                        </div>                        
+                    </div>
                 </div>
-                <div class="col-12 planning-center col-lg-6">
-                    <img src="./assets/img/planning2.png" alt="planning">
-                    <h4>App Development</h4>
-                    <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
-                    <a href="#" class="plan-arrow"><i class="fa-solid fa-arrow-down-long"></i></a>
-                </div>
+               
+               
             </div>
         </section>
 
