add part of testimonial section

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             <div class="container">
                 <div class="row row-lg">
                     <div class="col-12 col-lg-6">
-                        <div class="planning-card">
+                        <div class="card">
                             <img src="./assets/img/planning1.png" alt="planning">
                             <h3>Strategic Planning</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis laborum assumenda nemo quaerat consequatur alias, placeat at corrupti voluptates soluta explicabo tempore sint voluptatibus amet! Nulla repellat sit ipsam.</p>
                         </div>                        
                     </div>
                     <div class="col-12 col-lg-6">
-                        <div class="planning-card">
+                        <div class="card">
                             <img src="./assets/img/planning2.png" alt="planning">
                             <h4>App Development</h4>
                             <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
@@ -99,39 +99,61 @@
         </section>
 
         <!-- Partner Section -->
-        <section>
-            <div class="container flex">
-                <div class="col-12">Partner</div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
+        <section class="partner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h5>Testimonials</h5>
+                        <h3>We are committed expert partners</h3>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+                    </div>
+                    <div class="col-12">
+                        <div class="card row-md">
+                            <div class="col-md-4">
+                                <img src="./assets/img/testimonial1.jpg" alt="testimonial1">
+                            </div>
+                            <div class="col-md-8">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem, hic quis possimus voluptates sit incidunt dolores non culpa ab atque. Ipsa adipisci ex assumenda. <i class="fa-solid fa-quote-right"></i></p>
+                                <div class="partner-name">Nat Reynolds</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12"></div>
+                    <div class="col-12"></div>
+                </div>
             </div>
         </section>
 
         <!-- Benefits Section -->
         <section>
-            <div class="container flex row-md">
-                <div class="col-12 col-md-6 col-lg-4">Benefits</div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
+            <div class="container">
+                <div class="row row-md">
+                    <div class="col-12 col-md-6 col-lg-4">Benefits</div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                </div>
             </div>
         </section>
 
         <!-- About Section -->
         <section>
-            <div class="container flex row-md">
-                <div class="col-12 col-md-6">About</div>
-                <div class="col-12 col-md-6"></div>
+            <div class="container">
+                <div class="row row-md">
+                    <div class="col-12 col-md-6">About</div>
+                    <div class="col-12 col-md-6"></div>
+                </div>
             </div>
         </section>
 
         <!-- Free Section -->
         <section>
-            <div class="container flex">
-                <div class="col-12">Free</div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">Free</div>
+                </div>
             </div>
         </section>
 
