add testimonial section

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             </div>
         </section>
 
-        <!-- Partner Section -->
-        <section class="partner">
+        <!-- Testimonial Section -->
+        <section class="testimonial">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -108,18 +108,39 @@
                         <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                     </div>
                     <div class="col-12">
-                        <div class="card row-md">
-                            <div class="col-md-4">
+                        <div class="card row row-md">
+                            <div class="col-md-200">
                                 <img src="./assets/img/testimonial1.jpg" alt="testimonial1">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-quote">
                                 <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem, hic quis possimus voluptates sit incidunt dolores non culpa ab atque. Ipsa adipisci ex assumenda. <i class="fa-solid fa-quote-right"></i></p>
-                                <div class="partner-name">Nat Reynolds</div>
+                                <div class="testimonial-name">Nat Reynolds</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12"></div>
-                    <div class="col-12"></div>
+                    <div class="col-12">
+                        <div class="card row row-md">
+                            <div class="col-md-200">
+                                <img src="./assets/img/testimonial2.jpg" alt="testimonial1">
+                            </div>
+                            <div class="col-md-quote">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem, hic quis possimus voluptates sit incidunt dolores non culpa ab atque. Ipsa adipisci ex assumenda. <i class="fa-solid fa-quote-right"></i></p>
+                                <div class="testimonial-name">Celia Almeda</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="card row row-md">
+                            <div class="col-md-200">
+                                <img src="./assets/img/testimonial3.jpg" alt="testimonial1">
+                            </div>
+                            <div class="col-md-quote">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem, hic quis possimus voluptates sit incidunt dolores non culpa ab atque. Ipsa adipisci ex assumenda. <i class="fa-solid fa-quote-right"></i></p>
+                                <div class="testimonial-name">Bob Roberts</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
