--- a/index.html
+++ b/index.html
@@ -146,25 +146,83 @@
         </section>
 
         <!-- Benefits Section -->
-        <section>
+        <section class="beneficts">
             <div class="container">
+                <h3>Benefits of working with us</h3>
                 <div class="row row-md">
-                    <div class="col-12 col-md-6 col-lg-4">Benefits</div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">01</div>
+                            <h4>High Quality</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">02</div>
+                            <h4>Creative Team</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">03</div>
+                            <h4>Amazing Results</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">04</div>
+                            <h4>Best Pricing</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">05</div>
+                            <h4>Innovations</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="beneficts-number">06</div>
+                            <h4>24/7 Support</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem at nihil ipsam, quis quos magni veritatis odit aspernatur laboriosam maxime?</p>
+                            <a href="#" class="btn-beneficts">more</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- About Section -->
-        <section>
+        <section class="about">
             <div class="container">
                 <div class="row row-md">
-                    <div class="col-12 col-md-6">About</div>
-                    <div class="col-12 col-md-6"></div>
+                    <div class="col-12 col-md-6">
+                        <div class="card">
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque labore repellat voluptatum odit ducimus sit eveniet aspernatur est, eius possimus quo adipisci, tempora nulla. Cumque perspiciatis dolores perferendis saepe labore aut esse facilis dicta qui illum molestias, odit odio sunt obcaecati quos hic vitae in ipsa amet? Recusandae, incidunt. Aspernatur?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dignissimos in beatae, eaque ea excepturi magni fugit cum rerum dolorem veritatis! Tempora reiciendis iure voluptatibus fugit! Illo non iusto, vero minus quam debitis. Ut maxime, quos accusantium, repellendus atque molestiae adipisci ex recusandae suscipit facere unde deleniti officia quas quasi.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="card">
+                            <div class="flex">
+                                <img src="./assets/img/about.jpg" alt="about">
+                                <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            </div>
+                            <h3>I help companies lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                            <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Find me on Linkedin</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
