--- a/index.html
+++ b/index.html
@@ -228,10 +228,23 @@
         </section>
 
         <!-- Free Section -->
-        <section>
+        <section class="free">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">Free</div>
+                    <div class="col-12">
+                        <h5>Get started</h5>
+                        <h3>Simple, Transaparent Pricing</h3>
+                        <h2>It's Free!</h2>
+                        <p>We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                        <a href="#" class="start-button">Get Started</a>
+                        <div class="privacy">
+                            <span>Copyright 2021 Boolean</span>
+                            &#x2022;
+                            <span>Classe 104</span>
+                            &#x2022;
+                            <a href="#">Privacy Policy</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -239,7 +252,16 @@
     </main>
 
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis id iusto quia illo. Dicta, fugiat?</p>
+                    <div>
+                        <a href="#">Lorem, ipsum</a> lorem, ipsum dolor <a href="#">Boolean careers</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
