--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Responsive Layout</title>
 </head>
-<body class="debug">
+<body>
     <header>
         <div class="container display-header">
             <a href="#"><img src="./assets/img/logo.png" alt="logo"></a>
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row row-md">
                     <div class="col-12 col-md-8 flex-lg">
-                        <div class="card card-h100">
+                        <div class="card flex row-lg card-h100">
                             <div>
                                 <h4>Get a demo application</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam illo ullam sunt deserunt. Ullam ipsam possimus praesentium doloremque.</p>
@@ -206,14 +206,14 @@
         <section class="about">
             <div class="container">
                 <div class="row row-md">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-8">
                         <div class="card">
                             <h2>About Us</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque labore repellat voluptatum odit ducimus sit eveniet aspernatur est, eius possimus quo adipisci, tempora nulla. Cumque perspiciatis dolores perferendis saepe labore aut esse facilis dicta qui illum molestias, odit odio sunt obcaecati quos hic vitae in ipsa amet? Recusandae, incidunt. Aspernatur?</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dignissimos in beatae, eaque ea excepturi magni fugit cum rerum dolorem veritatis! Tempora reiciendis iure voluptatibus fugit! Illo non iusto, vero minus quam debitis. Ut maxime, quos accusantium, repellendus atque molestiae adipisci ex recusandae suscipit facere unde deleniti officia quas quasi.</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-4">
                         <div class="card">
                             <div class="flex">
                                 <img src="./assets/img/about.jpg" alt="about">
