--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row row-md">
                     <div class="col-12 col-md-8 flex-lg">
-                        <div class="card flex row-lg card-h100">
+                        <div class="card flex-lg row-lg card-h100">
                             <div>
                                 <h4>Get a demo application</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam illo ullam sunt deserunt. Ullam ipsam possimus praesentium doloremque.</p>
